# free-proxy

./: .env.example  .gitignore  AGENTS.md  README.md  README_EN.md  SPEC.md  check_openrouter.js  explore_opencode.js  explore_openrouter.js  free_api_test.md  jest.config.js  jest.setup.js  jest.web.config.js  package-lock.json  package.json  plan.md  pyproject.toml  python_report.md  research.md  test_providers.js  test_proxy.py  tsconfig.json  xiaohongshu.md
.agent/: PLANS.md
__tests__/: api-routes.test.ts  config.test.ts  fallback.test.ts  models.test.ts  openclaw-config.test.ts  openclaw-route.test.ts  rate-limit.test.ts  server.test.ts
__tests__/web/: legacy-archive.test.ts
data/: model-health.json  models.dev.json
docs/: migration-python-mainline.md  openclaw.json.sample  plan.md  research.md  typescript-legacy.md
public/: index.html
python_scripts/: __init__.py  cli.py  client.py  config.py  env_store.py  errors.py  health_store.py  openclaw_config.py  opencode_config.py  provider_catalog.py  server.py  service.py  smoke.py  smoke_cerebras.py  smoke_gemini.py  smoke_github.py  smoke_groq.py  smoke_mistral.py  smoke_opencode.py  smoke_openrouter.py  smoke_sambanova.py  token_policy.py
python_scripts/tests/: test_client.py  test_config.py  test_env_store.py  test_errors.py  test_health_store.py  test_openclaw_config.py  test_opencode_config.py  test_provider_matrix.py  test_server.py  test_service.py  test_token_policy.py
python_scripts/web/: index.html
src/: config.ts  fallback.ts  models.ts  openclaw-config.ts  rate-limit.ts  server.ts
