[project]
name = "free-proxy"
version = "0.1.0"
description = "聚合多家 provider 免费层的本地代理服务"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
free-proxy = "python_scripts.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python_scripts"]

[tool.uv]
dev-dependencies = []
